--- a/ChromeExtension/popup.html
+++ b/ChromeExtension/popup.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Site Safety Analyzer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1>Site Safety Analyzer</h1>
+  <div id="loading">Analyzing website safety...</div>
   <div id="result"></div>
   <div id="alternatives"></div>
   <script src="popup.js"></script>
